# flappybird-gba

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assets/: build_assets.sh
cmake/: Toolchain-devkitARM.cmake
src/: audio.c  audio.h  dma.h  io.c  io.h  irq.c  irq.h  main.c  memory.h  sin_lut.c  sin_lut.h  systemcall.h  systemcall.s  timer.h  types.h  video.c  video.h
